# io-arrays

./: CODE_OF_CONDUCT.md  COPYRIGHT  Cargo.toml  README.md  build.rs
examples/: hello-world.rs
src/: arrays.rs  borrow_streamer.rs  file_streamer.rs  files.rs  lib.rs  own_streamer.rs  owned_streamer.rs  posish.rs  ranges.rs  rustix.rs  slice.rs  windows.rs
tests/: tests.rs
