[package]
name = "io-arrays"
version = "0.10.0"
description = "Random-access I/O"
authors = ["Dan Gohman <dev@sunfishcode.online>"]
edition = "2018"
license = "Apache-2.0 WITH LLVM-exception OR Apache-2.0 OR MIT"
keywords = ["io"]
categories = ["rust-patterns"]
repository = "https://github.com/sunfishcode/io-arrays"
exclude = ["/.github"]

[dependencies]
async-std = { version = "1.10.0", optional = true }
cap-fs-ext = "0.25.0"
cap-std = "0.25.0"
cap-async-std = { version = "0.25.0", optional = true }
io-streams = { version = "0.12.0", optional = true }
system-interface = "0.21.0"
io-extras = { version = "0.15.0" }
io-lifetimes = { version = "0.7.0", default-features = false }

[target.'cfg(not(target_os = "wasi"))'.dependencies]
io-extras = { version = "0.15.0", features = ["os_pipe"] }

[target.'cfg(not(any(target_os = "android", target_os = "linux")))'.dependencies]
tempfile = "3.2.0"

[target.'cfg(not(windows))'.dependencies]
rustix = { version = "0.35.6", features = ["fs", "param"] }

[target.'cfg(windows)'.dependencies]
page_size = "0.4.2"
winx = "0.33.0"

[dev-dependencies]
anyhow = "1.0.38"
cap-tempfile = "0.25.0"
cap-std = "0.25.0"

[features]
default = ["io-streams"]
