[package]
name = "io-arrays"
version = "0.14.0"
description = "Random-access I/O"
authors = ["Dan Gohman <dev@sunfishcode.online>"]
edition = "2021"
license = "Apache-2.0 WITH LLVM-exception OR Apache-2.0 OR MIT"
keywords = ["io"]
categories = ["rust-patterns"]
repository = "https://github.com/sunfishcode/io-arrays"
exclude = ["/.github"]

[dependencies]
#async-std = { version = "2.0.0", optional = true }
cap-fs-ext = "3.0.0"
cap-std = "3.0.0"
#cap-async-std = { version = "3.0.0", optional = true }
io-streams = { version = "0.15.0", optional = true }
system-interface = "0.26.0"
io-extras = { version = "0.18.0" }
io-lifetimes = { version = "2.0.0", default-features = false }

[target.'cfg(not(target_os = "wasi"))'.dependencies]
io-extras = { version = "0.18.0", features = ["os_pipe"] }

[target.'cfg(not(any(target_os = "android", target_os = "linux")))'.dependencies]
tempfile = "3.2.0"

[target.'cfg(not(windows))'.dependencies]
rustix = { version = "0.38.0", features = ["fs", "param"] }

[target.'cfg(windows)'.dependencies]
winx = "0.36.0"

[dev-dependencies]
anyhow = "1.0.38"
cap-tempfile = "3.0.0"
cap-std = "3.0.0"

[features]
default = ["io-streams"]
